...
      }
    },
    "＋" : {
      "extractionState" : "manual",
      "shouldTranslate" : false
    },
    "＋ Chiếu câu hỏi" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "＋ Frage stellen"
          }
...
            "state" : "translated",
            "value" : "更新：2026年7月16日"
          }
        }
      }
    },
    "Câu hỏi của bạn là gì?" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Was ist deine Frage?"
          }
...
            "state" : "translated",
            "value" : "已读"
          }
        }
      }
    },
    "Đã xoá câu hỏi" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Frage gelöscht"
          }
...
            "state" : "translated",
            "value" : "附件"
          }
        }
      }
    },
    "Đọc Điều khoản sử dụng đầy đủ" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vollständige Nutzungsbedingungen lesen"
          }
...
            "state" : "translated",
            "value" : "看透"
          }
        }
      }
    },
    "Hoàn tác" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rückgängig"
          }
...
            "state" : "translated",
            "value" : "最近动态"
          }
        }
      }
    },
    "Hỏi đáp" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Q&A"
          }
...
            "state" : "translated",
            "value" : "这条内容已不存在。"
          }
        }
      }
    },
    "Nội quy cộng đồng" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Community-Regeln"
...
            "state" : "translated",
            "value" : "编辑资料"
          }
        }
      }
    },
    "Sửa hoặc xoá" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bearbeiten oder löschen"
          }
...
            "state" : "translated",
            "value" : "查看资料"
          }
        }
      }
    },
    "Xoá" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Löschen"
          }
...
